fix layout shifts

--- a/packages/shared/src/server/landing-page/landing-page.module.scss
+++ b/packages/shared/src/server/landing-page/landing-page.module.scss
@@ -42,6 +42,7 @@
 }
 
 .hero {
+  height: 300px;
   h2,
   strong {
     font-style: italic;
